[package]
name = "toxicmethyl"
version = "0.1.0"
edition = "2021"

[lib]
name = "mothra"
crate-type = ["cdylib"]

[dependencies]
clap = "4.1.11"
rust-htslib = "0.41.1"
mimalloc = {version = "0.1.34", default-features = false }
pyo3 = { version = "0.18.1" }
polars = "0.28.0"
pyo3-polars = "0.2.0"

[features]
default = ["pyo3/extension-module", "pyo3/abi3-py37"]